<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Happy Banking with Jujulove "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_total">Your total is 0</string>
    <string name="add_one">Add one</string>
    <string name="sub_one">Subtract one</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="paintings_web">Do you like this painting?</string>
    <string name="edit_text_hint">Type a Command</string>
    <string name="button">Click Me Button</string>
    <string name="invalid">invalid</string>
    <string name="ToggleButton">ToggleButton</string>
    <string name="sendEmail">Send Email</string>
    <string name="email_addr">Email Address(es)</string>
    <string name="hate_info">Hateful Info</string>
    <string name="person_name">Person\'s Name</string>
    <string name="email">EMAIL</string>
</resources>
