<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/etCommands"
    	android:hint="@string/edit_text_hint"    
    	android:inputType="textPassword"
    />
    <LinearLayout 
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
        android:id="@+id/bResults"
        android:layout_weight="20"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/button" />

        <ToggleButton
            android:layout_weight="80"
            android:paddingBottom="10dp"
            android:checked="true"
        android:id="@+id/tbPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ToggleButton" />
    </LinearLayout>
    

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/invalid" />

</LinearLayout>
