
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/horse"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_total"
        android:textSize="45sp" 
        android:gravity="center"
        android:id="@+id/tvDisplay"
        />
    
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/add_one"
        android:layout_gravity="center"
        android:textSize="20sp"  
        android:id="@+id/bAdd"      
        />
    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/sub_one"
        android:layout_gravity="center"
        android:textSize="20sp"  
        android:id="@+id/bSub"      
        />

</LinearLayout>
